--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -51,7 +51,6 @@
 }
 
 html {
-  scroll-behavior: smooth;
 }
 
 body {
